<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgotPasswordActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/colorPrimary2">

                <TextView
                    android:id="@+id/textView_password_reset_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/forgot_pass_header"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView_password_reset_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_password_reset_head"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/forgot_pass_desc"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">



                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="30dp">

                    <ImageView
                        android:id="@+id/imageView_userIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary2"
                        android:padding="8dp"
                        android:src="@drawable/img_email"
                        android:tint="@color/white"
                        tools:ignore="UseAppTint" />

                    <EditText
                        android:id="@+id/password_reset_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imageView_userIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/imageView_userIcon"
                        android:background="@color/editTextBG"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />

                </RelativeLayout>



                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/colorPrimary2"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/reset_pass"
                    android:textColor="@color/white" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>